// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive Site Service when creating a new dive site will create a new dive site with minimal information 1`] = `
{
  "__v": 0,
  "_id": "00000000-0000-0000-0000-000000000000",
  "createdOn": 2024-01-08T13:33:52.364Z,
  "creator": "5A4699D8-48C4-4410-9886-B74B8B85CAC1",
  "location": "San Diego, CA",
  "name": "Test Site",
  "reviews": [],
}
`;

exports[`Dive Site Service when creating a new dive site will create a new site and save it to the database 1`] = `
{
  "__v": 0,
  "_id": "00000000-0000-0000-0000-000000000000",
  "createdOn": 2024-01-08T13:33:52.364Z,
  "creator": "5A4699D8-48C4-4410-9886-B74B8B85CAC1",
  "depth": {
    "depth": 40,
    "unit": "ft",
  },
  "description": "This is a test site.",
  "directions": "Go to San Diego and then go to the beach.",
  "freeToDive": true,
  "gps": {
    "coordinates": [
      -117.1611,
      32.7157,
    ],
    "type": "Point",
  },
  "location": "San Diego, CA",
  "name": "Test Site",
  "reviews": [],
  "shoreAccess": true,
}
`;

exports[`Dive Site Service when retrieving a dive site will return the requested dive site 1`] = `
{
  "averageDifficulty": 2.55,
  "averageRating": 4,
  "createdOn": 2023-01-06T16:56:05.573Z,
  "creator": {
    "memberSince": 2024-01-08T13:24:58.620Z,
    "userId": "5A4699D8-48C4-4410-9886-B74B8B85CAC1",
    "username": "Joe.Regular",
  },
  "depth": {
    "depth": 93.3,
    "unit": "ft",
  },
  "description": "Officiis fugiat repellendus voluptatem facere doloribus autem sapiente quas. Aperiam non distinctio rem aperiam saepe quae soluta adipisci dolores.",
  "directions": "Perspiciatis praesentium inventore deserunt sed laboriosam quas officia.",
  "freeToDive": false,
  "gps": {
    "lat": -31.96,
    "lon": -7.2,
  },
  "id": "f8b954ff-709b-43bc-aade-21a6f6906cce",
  "location": "Fargo Georgia",
  "name": "inexperienced scimitar",
  "shoreAccess": true,
  "updatedOn": 2022-02-17T12:52:47.102Z,
}
`;

exports[`Dive Site Service when searching dive sites Will sort by name in asc order 1`] = `
[
  {
    "averageDifficulty": 2.69,
    "averageRating": 3.31,
    "createdOn": 2020-07-10T02:41:28.372Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 37.3,
      "unit": "m",
    },
    "description": "Enim ratione quam quasi occaecati. Iure soluta in consequatur voluptas ab molestiae ea blanditiis aperiam.",
    "directions": "Dolores nam officia reiciendis iusto voluptatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -34.84,
      "lon": 38.79,
    },
    "id": "3806eda9-5b04-48bd-9743-ea9f9e49a703",
    "location": "Youngstown Guatemala",
    "name": "academic sanction",
    "shoreAccess": true,
    "updatedOn": 2023-03-30T10:26:42.676Z,
  },
  {
    "averageDifficulty": 3.72,
    "averageRating": 3.46,
    "createdOn": 2019-09-18T13:28:58.184Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 73.2,
      "unit": "ft",
    },
    "description": "In aut vitae dolorum architecto perferendis. Cum harum excepturi.",
    "directions": "Perspiciatis maiores ad.",
    "freeToDive": false,
    "gps": {
      "lat": 85.04,
      "lon": 13.56,
    },
    "id": "b432465b-b102-45d2-88ab-9a7d7f57f82d",
    "location": "Rowlett Papua New Guinea",
    "name": "acclaimed windage",
    "shoreAccess": false,
    "updatedOn": 2020-12-16T11:12:54.892Z,
  },
  {
    "averageDifficulty": 3.57,
    "averageRating": 3.6,
    "createdOn": 2021-03-30T12:36:36.556Z,
    "creator": {
      "memberSince": 2018-10-27T16:03:42.342Z,
      "userId": "ed70c751-e659-4649-8983-2287e4199cda",
      "username": "Eryn_Bogan58",
    },
    "depth": {
      "depth": 37.56,
      "unit": "m",
    },
    "description": "Praesentium dolor inventore autem ab deleniti delectus commodi quas. Molestias perspiciatis dolore.",
    "directions": "Voluptas fugiat aut aut aliquam impedit molestiae aliquid.",
    "freeToDive": true,
    "gps": {
      "lat": 37.97,
      "lon": 125.23,
    },
    "id": "76a820c4-c8f2-4d81-afcf-235712fde93e",
    "location": "Rosemead Cuba",
    "name": "accomplished icecream",
    "shoreAccess": false,
    "updatedOn": 2021-07-17T18:12:29.122Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 2.1,
    "createdOn": 2019-03-12T18:01:54.794Z,
    "creator": {
      "memberSince": 2023-04-14T06:46:18.378Z,
      "userId": "928449ec-03af-438b-84d7-d82922a2f549",
      "username": "Jarod29",
    },
    "depth": {
      "depth": 128.7,
      "unit": "ft",
    },
    "description": "Atque quod ex corrupti voluptate porro officia adipisci dolore quia. Ullam maiores soluta corporis ex.",
    "directions": "Accusamus molestiae quaerat.",
    "freeToDive": true,
    "gps": {
      "lat": -36.36,
      "lon": 7.89,
    },
    "id": "d0496f41-ebc5-4798-8e10-7ad46d0a1b3e",
    "location": "Haverhill United Kingdom",
    "name": "adventurous honeydew",
    "shoreAccess": true,
    "updatedOn": 2021-03-22T17:42:05.678Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 3.41,
    "createdOn": 2018-07-10T09:01:53.557Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 32,
      "unit": "ft",
    },
    "description": "Delectus doloribus a rerum. At facilis tempore laudantium id consectetur.",
    "directions": "Optio tenetur illum.",
    "freeToDive": true,
    "gps": {
      "lat": 23.33,
      "lon": -30.3,
    },
    "id": "c667a962-aad5-4f34-a82a-60c1f6d25063",
    "location": "Hattiesburg Liechtenstein",
    "name": "alarming catastrophe",
    "shoreAccess": false,
    "updatedOn": 2020-08-22T08:15:41.714Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by name in desc order 1`] = `
[
  {
    "averageDifficulty": 4.85,
    "averageRating": 1.98,
    "createdOn": 2022-01-18T23:02:52.646Z,
    "creator": {
      "memberSince": 2018-05-10T12:02:56.902Z,
      "userId": "baeb11c8-e3ad-4af2-b664-85fe67a290d4",
      "username": "Camilla62",
    },
    "depth": {
      "depth": 8,
      "unit": "m",
    },
    "description": "Optio quae aliquid facere nesciunt sapiente aperiam placeat. Quibusdam consequatur aliquid.",
    "directions": "Sit dicta omnis.",
    "freeToDive": false,
    "gps": {
      "lat": 6.28,
      "lon": -6,
    },
    "id": "10c1c0a1-6f8e-44f3-862f-656b198e2b36",
    "location": "Harrisburg Grenada",
    "name": "writhing sandwich",
    "shoreAccess": false,
    "updatedOn": 2023-06-27T02:19:30.904Z,
  },
  {
    "averageDifficulty": 3.69,
    "averageRating": 2.75,
    "createdOn": 2021-02-18T22:47:47.542Z,
    "creator": {
      "memberSince": 2017-12-31T07:52:18.100Z,
      "userId": "c0f40730-124d-4f04-a33e-e37b2d43b0c0",
      "username": "Nicolette_Gleason",
    },
    "depth": {
      "depth": 78.7,
      "unit": "ft",
    },
    "description": "Tempora iusto adipisci numquam minima deleniti amet accusamus libero tenetur. Dolore fugit provident illum impedit asperiores fugiat.",
    "directions": "Voluptatem ipsam vel consequuntur eum quos id hic nesciunt.",
    "freeToDive": true,
    "gps": {
      "lat": 55.65,
      "lon": 157.13,
    },
    "id": "5f606536-da76-41fe-a74b-a4981144e12f",
    "location": "St. Joseph Hungary",
    "name": "wrathful container",
    "shoreAccess": true,
    "updatedOn": 2021-02-20T01:40:39.044Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.68,
    "createdOn": 2022-10-30T01:31:28.825Z,
    "creator": {
      "memberSince": 2019-05-24T20:21:05.865Z,
      "userId": "47064f42-07c1-4da4-bd31-37ca70a353e7",
      "username": "Orie.Fahey",
    },
    "depth": {
      "depth": 32.97,
      "unit": "m",
    },
    "description": "Iure error enim asperiores nobis molestiae corporis aliquid veniam dolorem. Harum voluptatibus aspernatur nobis.",
    "directions": "Cupiditate minus perferendis soluta natus at dolores veniam optio.",
    "freeToDive": false,
    "gps": {
      "lat": 4.14,
      "lon": 17.35,
    },
    "id": "f3bb0ef1-bb76-468f-84c5-a4dce96dfa8a",
    "location": "Reston Morocco",
    "name": "worthless decision",
    "shoreAccess": true,
    "updatedOn": 2022-10-31T14:50:01.908Z,
  },
  {
    "averageDifficulty": 2.07,
    "averageRating": 4.88,
    "createdOn": 2020-03-31T01:03:30.190Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 6.09,
      "unit": "m",
    },
    "description": "Totam voluptatum magnam voluptas. Commodi maxime aperiam deserunt.",
    "directions": "Harum nihil reiciendis corrupti nam vel neque.",
    "freeToDive": true,
    "gps": {
      "lat": -81.39,
      "lon": 132.33,
    },
    "id": "ccb01e30-256b-4253-80c7-4445b7424ba5",
    "location": "Centennial Guadeloupe",
    "name": "worst treasure",
    "shoreAccess": false,
    "updatedOn": 2022-01-25T05:26:50.265Z,
  },
  {
    "averageDifficulty": 2.2,
    "averageRating": 4.82,
    "createdOn": 2021-04-11T12:40:42.016Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 126.9,
      "unit": "ft",
    },
    "description": "Facere ratione suscipit reprehenderit veritatis laborum blanditiis corporis. Rem nostrum eius impedit repudiandae.",
    "directions": "Et reiciendis provident modi ut ut eaque quo.",
    "freeToDive": false,
    "gps": {
      "lat": 49.25,
      "lon": -136.76,
    },
    "id": "acc48388-1413-4610-a3a0-d36b76759ac2",
    "location": "Sterling Heights Bhutan",
    "name": "worrisome cinnamon",
    "shoreAccess": true,
    "updatedOn": 2021-03-11T21:10:37.784Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by rating in asc order 1`] = `
[
  {
    "averageDifficulty": 2.43,
    "averageRating": 1.01,
    "createdOn": 2019-06-06T11:46:01.038Z,
    "creator": {
      "memberSince": 2019-10-05T05:53:03.760Z,
      "userId": "a4f41661-a1c4-46cd-9c34-30c952ed9d32",
      "username": "Lionel_Hickle",
    },
    "depth": {
      "depth": 3.17,
      "unit": "m",
    },
    "description": "Dolorum velit consequatur et qui blanditiis ex fuga nam. Accusamus assumenda consequuntur accusantium maxime.",
    "directions": "At odio sint blanditiis assumenda.",
    "freeToDive": false,
    "gps": {
      "lat": -2.74,
      "lon": -24.88,
    },
    "id": "d9306937-4009-4a67-aded-bb734cb71235",
    "location": "Indio Japan",
    "name": "untidy authentication",
    "shoreAccess": false,
    "updatedOn": 2022-07-20T16:33:14.348Z,
  },
  {
    "averageDifficulty": 2.02,
    "averageRating": 1.05,
    "createdOn": 2019-06-27T20:52:19.877Z,
    "creator": {
      "memberSince": 2019-05-17T06:54:43.455Z,
      "userId": "aba67b0e-2063-40c8-8713-86eee84210c8",
      "username": "Jazlyn_Jakubowski13",
    },
    "depth": {
      "depth": 6.92,
      "unit": "m",
    },
    "description": "Fuga nesciunt quasi veniam repudiandae enim cupiditate nesciunt. Labore culpa officiis est natus vitae blanditiis.",
    "directions": "Facere quidem neque voluptatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -14.83,
      "lon": 45.05,
    },
    "id": "bef543fc-4caf-4502-928f-e66897f5b843",
    "location": "Bethlehem Lao People's Democratic Republic",
    "name": "humiliating surname",
    "shoreAccess": false,
    "updatedOn": 2020-12-09T00:05:02.743Z,
  },
  {
    "averageDifficulty": 4.8,
    "averageRating": 1.09,
    "createdOn": 2019-03-23T07:49:17.434Z,
    "creator": {
      "memberSince": 2021-04-03T11:58:56.408Z,
      "userId": "2d152a10-1314-4494-8fa5-72d091bdb270",
      "username": "Sigmund_Muller",
    },
    "depth": {
      "depth": 81.5,
      "unit": "ft",
    },
    "description": "Eius consequatur repudiandae dolores exercitationem corporis ea velit. Eius iure voluptates tempore a.",
    "directions": "Excepturi quam a animi.",
    "freeToDive": true,
    "gps": {
      "lat": -61.15,
      "lon": -11.85,
    },
    "id": "0ea01835-3eb8-4f05-8f43-a7fbf91fe070",
    "location": "Akron Congo",
    "name": "concrete dancer",
    "shoreAccess": false,
    "updatedOn": 2023-03-21T22:21:41.436Z,
  },
  {
    "averageDifficulty": 1.25,
    "averageRating": 1.1,
    "createdOn": 2019-07-16T04:58:23.366Z,
    "creator": {
      "memberSince": 2017-09-22T05:17:43.857Z,
      "userId": "4d014c0a-9b5c-4080-be63-eade8a9260da",
      "username": "Jeanne.Wiegand11",
    },
    "depth": {
      "depth": 12.92,
      "unit": "m",
    },
    "description": "Ipsum pariatur modi sed dignissimos ut tenetur necessitatibus. Soluta tenetur asperiores maxime vel maiores vitae voluptas ab soluta.",
    "directions": "Corrupti laboriosam at illo eaque placeat explicabo.",
    "freeToDive": false,
    "gps": {
      "lat": 29.27,
      "lon": -106.34,
    },
    "id": "deaa1c8e-f067-4ada-9229-6d5fa378abd6",
    "location": "Victorville China",
    "name": "weepy brother-in-law",
    "shoreAccess": true,
    "updatedOn": 2022-02-19T08:25:23.340Z,
  },
  {
    "averageDifficulty": 1.12,
    "averageRating": 1.14,
    "createdOn": 2019-10-03T07:33:28.059Z,
    "creator": {
      "memberSince": 2017-09-20T17:24:23.460Z,
      "userId": "9487653a-40e7-446f-b45d-3fbf3bf97644",
      "username": "Preston40",
    },
    "depth": {
      "depth": 75.4,
      "unit": "ft",
    },
    "description": "Suscipit assumenda tempora possimus pariatur voluptas. Impedit aliquam nam temporibus omnis eius.",
    "directions": "Nihil laborum quae neque repudiandae.",
    "freeToDive": true,
    "gps": {
      "lat": -33.63,
      "lon": -105.4,
    },
    "id": "abef4dc8-1254-45e7-ae95-8d2978564f3d",
    "location": "Dothan Bolivia",
    "name": "failing blight",
    "shoreAccess": false,
    "updatedOn": 2023-04-28T01:48:51.271Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites Will sort by rating in desc order 1`] = `
[
  {
    "averageDifficulty": 3.88,
    "averageRating": 4.96,
    "createdOn": 2021-06-13T14:23:35.687Z,
    "creator": {
      "memberSince": 2021-11-02T20:39:02.263Z,
      "userId": "11f3f8dd-5bbd-4344-8173-3a388484c4d3",
      "username": "Pietro.Tillman",
    },
    "depth": {
      "depth": 114.4,
      "unit": "ft",
    },
    "description": "Iure consequatur illum molestiae. Alias magni deserunt saepe facilis numquam reprehenderit corporis atque ipsam.",
    "directions": "Veritatis nesciunt possimus laborum quisquam officiis nostrum asperiores reiciendis.",
    "freeToDive": true,
    "gps": {
      "lat": -21.98,
      "lon": -110.74,
    },
    "id": "d9a2ee0d-1fde-411a-8808-faefdc4cb29d",
    "location": "Athens-Clarke County Liechtenstein",
    "name": "impure gavel",
    "shoreAccess": false,
    "updatedOn": 2020-11-26T14:50:50.727Z,
  },
  {
    "averageDifficulty": 3.8,
    "averageRating": 4.95,
    "createdOn": 2022-12-30T06:36:35.521Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 11.31,
      "unit": "m",
    },
    "description": "Quia accusantium asperiores. Blanditiis deserunt voluptates temporibus.",
    "directions": "Voluptas doloremque asperiores iure architecto voluptate fugit commodi.",
    "freeToDive": false,
    "gps": {
      "lat": 12.6,
      "lon": -55.31,
    },
    "id": "3d49a4f1-8918-4b89-96dc-81db0ea99ed5",
    "location": "Anaheim Guadeloupe",
    "name": "concrete thing",
    "shoreAccess": true,
    "updatedOn": 2021-12-19T06:06:01.543Z,
  },
  {
    "averageDifficulty": 4.4,
    "averageRating": 4.93,
    "createdOn": 2017-11-10T20:27:25.268Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 60.4,
      "unit": "ft",
    },
    "description": "Beatae voluptate incidunt dolorem autem qui. Incidunt eaque aspernatur corrupti maiores ea quis dicta libero molestias.",
    "directions": "Repellendus enim ratione molestias excepturi natus enim tempora sint repellat.",
    "freeToDive": true,
    "gps": {
      "lat": -49.25,
      "lon": -135.28,
    },
    "id": "d723ed3f-edde-4dbe-b9fc-dfa846ac0cc2",
    "location": "San Jose Guernsey",
    "name": "runny patio",
    "shoreAccess": true,
    "updatedOn": 2023-01-20T08:20:22.960Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.91,
    "createdOn": 2020-08-24T23:45:29.318Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 35.84,
      "unit": "m",
    },
    "description": "Porro voluptate exercitationem aperiam cumque eveniet iste adipisci non. Tempora ullam tempore eius nulla.",
    "directions": "Distinctio quas dolor facilis totam nam laboriosam architecto.",
    "freeToDive": true,
    "gps": {
      "lat": 21.8,
      "lon": -7.65,
    },
    "id": "4d879040-500e-4fd5-8400-e6f4c78e5b62",
    "location": "Rialto Marshall Islands",
    "name": "rundown handful",
    "shoreAccess": false,
    "updatedOn": 2021-06-13T03:32:10.180Z,
  },
  {
    "averageDifficulty": 4.35,
    "averageRating": 4.902,
    "createdOn": 2018-06-27T20:05:37.095Z,
    "creator": {
      "memberSince": 2020-09-25T22:21:02.836Z,
      "userId": "25793873-3413-4e78-aa6e-77717a7a23b8",
      "username": "Casimir_Reynolds11",
    },
    "depth": {
      "depth": 35.16,
      "unit": "m",
    },
    "description": "At perferendis repudiandae recusandae. Non totam ea molestias alias libero corporis quos repellendus culpa.",
    "directions": "Natus facilis nam iure in.",
    "freeToDive": true,
    "gps": {
      "lat": 66.65,
      "lon": 140.28,
    },
    "id": "6dbb141e-2cbd-4ac7-bdd9-ed54ff10623e",
    "location": "Cedar Park Denmark",
    "name": "each breath",
    "shoreAccess": true,
    "updatedOn": 2021-05-03T12:52:47.304Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will allow pagination of results 1`] = `
[
  {
    "averageDifficulty": 4.73,
    "averageRating": 3.41,
    "createdOn": 2018-07-10T09:01:53.557Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 32,
      "unit": "ft",
    },
    "description": "Delectus doloribus a rerum. At facilis tempore laudantium id consectetur.",
    "directions": "Optio tenetur illum.",
    "freeToDive": true,
    "gps": {
      "lat": 23.33,
      "lon": -30.3,
    },
    "id": "c667a962-aad5-4f34-a82a-60c1f6d25063",
    "location": "Hattiesburg Liechtenstein",
    "name": "alarming catastrophe",
    "shoreAccess": false,
    "updatedOn": 2020-08-22T08:15:41.714Z,
  },
  {
    "averageDifficulty": 4.89,
    "averageRating": 3.38,
    "createdOn": 2020-04-29T15:44:58.227Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 21.09,
      "unit": "m",
    },
    "description": "Neque sequi quas aperiam est impedit expedita ducimus unde maiores. Suscipit tenetur enim molestiae excepturi.",
    "directions": "Nihil deleniti dolore ducimus voluptas accusamus.",
    "freeToDive": true,
    "gps": {
      "lat": -19.28,
      "lon": -151.77,
    },
    "id": "5cb4c351-7d29-4277-8815-eea84156a985",
    "location": "Brandon Afghanistan",
    "name": "unique fleck",
    "shoreAccess": true,
    "updatedOn": 2021-04-20T11:29:37.034Z,
  },
  {
    "averageDifficulty": 1.2,
    "averageRating": 3.36,
    "createdOn": 2019-11-11T04:47:58.204Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 31.5,
      "unit": "ft",
    },
    "description": "Harum minima alias nostrum in aut quos possimus. Iure animi vel asperiores delectus laboriosam facilis.",
    "directions": "Labore veritatis facilis.",
    "freeToDive": true,
    "gps": {
      "lat": 54.67,
      "lon": 90.13,
    },
    "id": "b5ddaa6d-9ed4-428d-9592-f6a21088e85c",
    "location": "Jupiter Iran",
    "name": "qualified somebody",
    "shoreAccess": false,
    "updatedOn": 2020-09-17T01:01:09.609Z,
  },
  {
    "averageDifficulty": 3.65,
    "averageRating": 3.35,
    "createdOn": 2023-07-22T12:37:33.782Z,
    "creator": {
      "memberSince": 2019-10-05T05:53:03.760Z,
      "userId": "a4f41661-a1c4-46cd-9c34-30c952ed9d32",
      "username": "Lionel_Hickle",
    },
    "depth": {
      "depth": 29.31,
      "unit": "m",
    },
    "description": "Soluta cumque impedit pariatur nemo temporibus dicta. Molestias sit ullam.",
    "directions": "Dolor rem et eum nostrum natus magnam reiciendis ea laborum.",
    "freeToDive": false,
    "gps": {
      "lat": -74.43,
      "lon": -0.08,
    },
    "id": "e5dc5236-829c-4d19-b840-166ce782b4d2",
    "location": "Waltham Paraguay",
    "name": "terrific jerk",
    "shoreAccess": false,
    "updatedOn": 2021-10-24T21:05:18.621Z,
  },
  {
    "averageDifficulty": 2.69,
    "averageRating": 3.31,
    "createdOn": 2020-07-10T02:41:28.372Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 37.3,
      "unit": "m",
    },
    "description": "Enim ratione quam quasi occaecati. Iure soluta in consequatur voluptas ab molestiae ea blanditiis aperiam.",
    "directions": "Dolores nam officia reiciendis iusto voluptatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -34.84,
      "lon": 38.79,
    },
    "id": "3806eda9-5b04-48bd-9743-ea9f9e49a703",
    "location": "Youngstown Guatemala",
    "name": "academic sanction",
    "shoreAccess": true,
    "updatedOn": 2023-03-30T10:26:42.676Z,
  },
  {
    "averageDifficulty": 2.69,
    "averageRating": 3.31,
    "createdOn": 2019-11-26T01:48:55.306Z,
    "creator": {
      "memberSince": 2018-05-10T12:02:56.902Z,
      "userId": "baeb11c8-e3ad-4af2-b664-85fe67a290d4",
      "username": "Camilla62",
    },
    "depth": {
      "depth": 17.25,
      "unit": "m",
    },
    "description": "Harum laboriosam minima dolor. Corrupti laborum sed ab suscipit explicabo.",
    "directions": "Eum quod eveniet necessitatibus ut corrupti incidunt.",
    "freeToDive": true,
    "gps": {
      "lat": -6.05,
      "lon": 144.9,
    },
    "id": "4b846bb8-e355-4547-ab3d-8e3a7343751f",
    "location": "Enid Benin",
    "name": "frightening interview",
    "shoreAccess": true,
    "updatedOn": 2020-11-06T10:00:28.805Z,
  },
  {
    "averageDifficulty": 2.68,
    "averageRating": 3.3,
    "createdOn": 2021-01-10T11:18:00.803Z,
    "creator": {
      "memberSince": 2019-10-05T05:53:03.760Z,
      "userId": "a4f41661-a1c4-46cd-9c34-30c952ed9d32",
      "username": "Lionel_Hickle",
    },
    "depth": {
      "depth": 16.38,
      "unit": "m",
    },
    "description": "Enim impedit beatae quod. Dolores velit molestias accusantium sint sint.",
    "directions": "Nisi facere facere rem cum maxime dolorem neque saepe.",
    "freeToDive": false,
    "gps": {
      "lat": 78.56,
      "lon": -176.8,
    },
    "id": "c0f97537-5529-4ea7-b6e3-c26ae67ad942",
    "location": "Harlingen Barbados",
    "name": "teeming change",
    "shoreAccess": true,
    "updatedOn": 2023-05-23T11:38:43.988Z,
  },
  {
    "averageDifficulty": 1.26,
    "averageRating": 3.28,
    "createdOn": 2022-01-23T19:26:34.598Z,
    "creator": {
      "memberSince": 2021-07-14T13:16:54.794Z,
      "userId": "f66496b8-5544-48d2-9c04-1b0649038a79",
      "username": "Samir.Medhurst",
    },
    "depth": {
      "depth": 14.9,
      "unit": "ft",
    },
    "description": "Assumenda omnis molestias ipsam voluptas voluptates numquam sequi dicta. Dolores exercitationem magni.",
    "directions": "Necessitatibus eveniet numquam.",
    "freeToDive": true,
    "gps": {
      "lat": -27.46,
      "lon": 99.55,
    },
    "id": "eb44770a-8624-46d9-81ae-fb616486dbd9",
    "location": "Wilmington Grenada",
    "name": "fantastic remains",
    "shoreAccess": false,
    "updatedOn": 2022-06-12T18:10:43.805Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by creator 1`] = `
[
  {
    "averageDifficulty": 3.78,
    "averageRating": 3.15,
    "createdOn": 2019-09-08T22:41:24.894Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 7.31,
      "unit": "m",
    },
    "description": "Quas occaecati dolor reiciendis occaecati. Aut a nihil officiis architecto distinctio mollitia.",
    "directions": "Ipsam debitis libero aspernatur quas pariatur placeat nostrum in beatae.",
    "freeToDive": true,
    "gps": {
      "lat": -36.77,
      "lon": -118.43,
    },
    "id": "f36010e1-9de6-4838-86a0-41a12555f758",
    "location": "Conway United Arab Emirates",
    "name": "whole intention",
    "shoreAccess": false,
    "updatedOn": 2023-02-13T11:54:30.108Z,
  },
  {
    "averageDifficulty": 4.67,
    "averageRating": 2.98,
    "createdOn": 2020-11-22T09:38:40.476Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 32.2,
      "unit": "ft",
    },
    "description": "Debitis quo nam tempore recusandae odit. Doloribus dolorum maxime repudiandae.",
    "directions": "Expedita omnis temporibus ratione ullam odio molestias illo.",
    "freeToDive": false,
    "gps": {
      "lat": 19.43,
      "lon": -139.06,
    },
    "id": "2d893dab-a296-4d92-ae36-6f58a0f3da39",
    "location": "Tracy Christmas Island",
    "name": "sore advocacy",
    "shoreAccess": false,
    "updatedOn": 2021-03-26T05:14:32.555Z,
  },
  {
    "averageDifficulty": 4.7,
    "averageRating": 2.95,
    "createdOn": 2022-10-14T05:48:18.334Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 10.82,
      "unit": "m",
    },
    "description": "Ut quam eligendi temporibus tempora quos. Occaecati ex quibusdam.",
    "directions": "Repellat voluptate quisquam voluptatem.",
    "freeToDive": false,
    "gps": {
      "lat": 26.26,
      "lon": 144.7,
    },
    "id": "272108a7-373c-4efd-a083-57af57813bac",
    "location": "Glendale Togo",
    "name": "rectangular sponsorship",
    "shoreAccess": false,
    "updatedOn": 2022-04-26T10:14:20.680Z,
  },
  {
    "averageDifficulty": 2.99,
    "averageRating": 2.7,
    "createdOn": 2023-02-19T15:16:29.973Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 35.42,
      "unit": "m",
    },
    "description": "Dolore assumenda qui corporis quidem atque magnam voluptate. Id fugiat sed cupiditate.",
    "directions": "Odit quaerat repudiandae fugit saepe doloremque in modi quae.",
    "freeToDive": false,
    "gps": {
      "lat": 7.71,
      "lon": -134.11,
    },
    "id": "291f8cb5-bc01-4c16-a934-6efa2247a4a8",
    "location": "Edmond Heard Island and McDonald Islands",
    "name": "mountainous doubter",
    "shoreAccess": false,
    "updatedOn": 2021-11-24T21:50:38.624Z,
  },
  {
    "averageDifficulty": 1.45,
    "averageRating": 2.62,
    "createdOn": 2020-02-09T15:10:13.546Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 16.16,
      "unit": "m",
    },
    "description": "Architecto excepturi soluta debitis corrupti quae totam dicta necessitatibus suscipit. Amet deserunt cum.",
    "directions": "Possimus perferendis vero.",
    "freeToDive": true,
    "gps": {
      "lat": -12.32,
      "lon": -20.67,
    },
    "id": "8b985941-9ae0-4714-bdc5-a37f40140069",
    "location": "Cerritos Tonga",
    "name": "glaring maize",
    "shoreAccess": true,
    "updatedOn": 2021-02-01T03:39:58.639Z,
  },
  {
    "averageDifficulty": 4.74,
    "averageRating": 1.95,
    "createdOn": 2019-04-19T22:03:04.303Z,
    "creator": {
      "memberSince": 2021-04-21T16:42:26.484Z,
      "userId": "682d9dd4-90cd-43e4-be63-bb67186366b9",
      "username": "Malcolm56",
    },
    "depth": {
      "depth": 21.37,
      "unit": "m",
    },
    "description": "Autem eum laboriosam accusamus impedit. Provident eaque sed non.",
    "directions": "Ipsa fugit qui facere.",
    "freeToDive": true,
    "gps": {
      "lat": 30.34,
      "lon": -152.41,
    },
    "id": "41b26df2-de43-4f90-8a95-d3f4d37c3e3b",
    "location": "Carolina Cambodia",
    "name": "lasting revenge",
    "shoreAccess": false,
    "updatedOn": 2022-12-28T09:56:08.297Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by difficulty 1`] = `
[
  {
    "averageDifficulty": 2.2,
    "averageRating": 4.82,
    "createdOn": 2021-04-11T12:40:42.016Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 126.9,
      "unit": "ft",
    },
    "description": "Facere ratione suscipit reprehenderit veritatis laborum blanditiis corporis. Rem nostrum eius impedit repudiandae.",
    "directions": "Et reiciendis provident modi ut ut eaque quo.",
    "freeToDive": false,
    "gps": {
      "lat": 49.25,
      "lon": -136.76,
    },
    "id": "acc48388-1413-4610-a3a0-d36b76759ac2",
    "location": "Sterling Heights Bhutan",
    "name": "worrisome cinnamon",
    "shoreAccess": true,
    "updatedOn": 2021-03-11T21:10:37.784Z,
  },
  {
    "averageDifficulty": 2.49,
    "averageRating": 4.48,
    "createdOn": 2019-04-17T18:41:01.368Z,
    "creator": {
      "memberSince": 2017-09-22T05:17:43.857Z,
      "userId": "4d014c0a-9b5c-4080-be63-eade8a9260da",
      "username": "Jeanne.Wiegand11",
    },
    "depth": {
      "depth": 119.3,
      "unit": "ft",
    },
    "description": "Autem atque iusto ducimus maiores ipsum ullam reprehenderit suscipit. Earum mollitia quia nulla neque dolor itaque ad aut.",
    "directions": "Expedita esse quisquam error dolore ratione eveniet sit quisquam tempore.",
    "freeToDive": false,
    "gps": {
      "lat": 65.84,
      "lon": -138.57,
    },
    "id": "016ec75a-0ed9-42fc-a49a-08f8472473b6",
    "location": "Oro Valley Lebanon",
    "name": "quizzical cloth",
    "shoreAccess": true,
    "updatedOn": 2022-11-13T10:07:53.313Z,
  },
  {
    "averageDifficulty": 2.6,
    "averageRating": 4.34,
    "createdOn": 2017-11-07T01:21:24.308Z,
    "creator": {
      "memberSince": 2017-11-11T03:46:51.362Z,
      "userId": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
      "username": "Antonia.Purdy6",
    },
    "depth": {
      "depth": 25.33,
      "unit": "m",
    },
    "description": "Culpa eius dolor velit est temporibus. Accusantium quasi voluptas facilis quas facere porro reiciendis.",
    "directions": "Rem illo mollitia blanditiis.",
    "freeToDive": false,
    "gps": {
      "lat": 5.48,
      "lon": 118.95,
    },
    "id": "f74e1f78-1fef-42b3-b7f0-e33affa540fa",
    "location": "Arecibo Indonesia",
    "name": "daring yak",
    "shoreAccess": false,
    "updatedOn": 2022-04-13T13:39:43.008Z,
  },
  {
    "averageDifficulty": 2.58,
    "averageRating": 4.13,
    "createdOn": 2019-10-06T13:57:10.032Z,
    "creator": {
      "memberSince": 2017-10-09T08:41:48.547Z,
      "userId": "5d648c18-1836-4294-8384-fff82b3f57fa",
      "username": "Mina65",
    },
    "depth": {
      "depth": 30.54,
      "unit": "m",
    },
    "description": "Eveniet aut sequi. Distinctio similique esse voluptate ex ipsum officia ad sapiente.",
    "directions": "Adipisci pariatur totam.",
    "freeToDive": false,
    "gps": {
      "lat": 50.21,
      "lon": -56.4,
    },
    "id": "6de33041-3414-49c5-af31-b183044250e5",
    "location": "Jurupa Valley Suriname",
    "name": "clueless impudence",
    "shoreAccess": false,
    "updatedOn": 2022-04-30T06:54:19.881Z,
  },
  {
    "averageDifficulty": 2.5,
    "averageRating": 4.12,
    "createdOn": 2019-09-14T15:25:56.337Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 7.99,
      "unit": "m",
    },
    "description": "Nulla doloremque a excepturi deleniti et blanditiis. Libero totam possimus necessitatibus dolorum cum eius asperiores.",
    "directions": "Magni vitae corporis voluptas sapiente.",
    "freeToDive": false,
    "gps": {
      "lat": -80.45,
      "lon": 119.56,
    },
    "id": "3400467d-3ba5-4417-9679-6b3616591c02",
    "location": "Arvada Chile",
    "name": "superior hemp",
    "shoreAccess": false,
    "updatedOn": 2022-12-25T04:44:43.150Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using long distance 1`] = `
[
  {
    "averageDifficulty": 2,
    "averageRating": 4.84,
    "createdOn": 2018-09-28T19:27:47.940Z,
    "creator": {
      "memberSince": 2018-04-11T07:18:30.090Z,
      "userId": "c24724ee-bccb-46a6-bb55-035d4c5d97fa",
      "username": "Garret.Nicolas20",
    },
    "depth": {
      "depth": 48.2,
      "unit": "ft",
    },
    "description": "Rem ad vero doloribus exercitationem nulla provident ducimus alias. Ipsam fuga ipsam quasi enim aspernatur.",
    "directions": "Unde enim alias nam aspernatur perferendis omnis placeat nobis placeat.",
    "freeToDive": false,
    "gps": {
      "lat": 85.12,
      "lon": 147.47,
    },
    "id": "95341a27-a210-4423-bc39-40736b2df4c8",
    "location": "Bayamon French Southern Territories",
    "name": "crafty den",
    "shoreAccess": false,
    "updatedOn": 2023-01-21T00:22:37.805Z,
  },
  {
    "averageDifficulty": 2.17,
    "averageRating": 4.14,
    "createdOn": 2022-03-31T04:18:56.031Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 4.75,
      "unit": "m",
    },
    "description": "Minus aliquam aperiam quo eaque ducimus reiciendis dolorem. Porro distinctio optio doloribus et repellat quisquam.",
    "directions": "Delectus assumenda placeat minus optio.",
    "freeToDive": false,
    "gps": {
      "lat": 85.63,
      "lon": -166.14,
    },
    "id": "54ae23b4-ccef-46c8-8e3d-7af56974e91e",
    "location": "Madera Barbados",
    "name": "drafty firewall",
    "shoreAccess": false,
    "updatedOn": 2022-01-13T07:20:42.556Z,
  },
  {
    "averageDifficulty": 2.87,
    "averageRating": 3.76,
    "createdOn": 2021-11-25T14:48:00.030Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 39.93,
      "unit": "m",
    },
    "description": "Animi ducimus asperiores reiciendis. Totam beatae quas laboriosam voluptas perferendis corrupti adipisci quas itaque.",
    "directions": "Dolore molestiae aliquam.",
    "freeToDive": false,
    "gps": {
      "lat": 88.24,
      "lon": -178.88,
    },
    "id": "c68f5257-27a3-412a-a71d-1e669fb0cfff",
    "location": "White Plains Gabon",
    "name": "qualified beyond",
    "shoreAccess": false,
    "updatedOn": 2021-05-18T00:20:01.895Z,
  },
  {
    "averageDifficulty": 1.68,
    "averageRating": 2.35,
    "createdOn": 2019-10-23T07:23:29.970Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 22.95,
      "unit": "m",
    },
    "description": "Sequi optio sunt libero commodi itaque. Ipsa molestias eligendi.",
    "directions": "Quas fuga occaecati temporibus.",
    "freeToDive": true,
    "gps": {
      "lat": 87.1,
      "lon": -177.91,
    },
    "id": "563f5259-bead-4e84-8670-f095ab6bd282",
    "location": "Laguna Niguel Moldova",
    "name": "obese postage",
    "shoreAccess": true,
    "updatedOn": 2023-07-30T13:12:33.100Z,
  },
  {
    "averageDifficulty": 4.04,
    "averageRating": 1.61,
    "createdOn": 2018-07-14T18:11:06.192Z,
    "creator": {
      "memberSince": 2018-10-27T16:03:42.342Z,
      "userId": "ed70c751-e659-4649-8983-2287e4199cda",
      "username": "Eryn_Bogan58",
    },
    "depth": {
      "depth": 72,
      "unit": "ft",
    },
    "description": "Eaque reprehenderit dolores placeat nesciunt officiis. Voluptatibus modi mollitia eligendi.",
    "directions": "Consequatur tenetur est minima velit id velit.",
    "freeToDive": false,
    "gps": {
      "lat": 87.77,
      "lon": -115.15,
    },
    "id": "d7b71b04-7d9c-404e-8e39-8f9aede5a6bb",
    "location": "Castle Rock New Caledonia",
    "name": "competent wildebeest",
    "shoreAccess": true,
    "updatedOn": 2022-08-28T19:33:11.044Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using medium distance 1`] = `
[
  {
    "averageDifficulty": 2.87,
    "averageRating": 3.76,
    "createdOn": 2021-11-25T14:48:00.030Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 39.93,
      "unit": "m",
    },
    "description": "Animi ducimus asperiores reiciendis. Totam beatae quas laboriosam voluptas perferendis corrupti adipisci quas itaque.",
    "directions": "Dolore molestiae aliquam.",
    "freeToDive": false,
    "gps": {
      "lat": 88.24,
      "lon": -178.88,
    },
    "id": "c68f5257-27a3-412a-a71d-1e669fb0cfff",
    "location": "White Plains Gabon",
    "name": "qualified beyond",
    "shoreAccess": false,
    "updatedOn": 2021-05-18T00:20:01.895Z,
  },
  {
    "averageDifficulty": 1.68,
    "averageRating": 2.35,
    "createdOn": 2019-10-23T07:23:29.970Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 22.95,
      "unit": "m",
    },
    "description": "Sequi optio sunt libero commodi itaque. Ipsa molestias eligendi.",
    "directions": "Quas fuga occaecati temporibus.",
    "freeToDive": true,
    "gps": {
      "lat": 87.1,
      "lon": -177.91,
    },
    "id": "563f5259-bead-4e84-8670-f095ab6bd282",
    "location": "Laguna Niguel Moldova",
    "name": "obese postage",
    "shoreAccess": true,
    "updatedOn": 2023-07-30T13:12:33.100Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by distance using short distance 1`] = `
[
  {
    "averageDifficulty": 2.87,
    "averageRating": 3.76,
    "createdOn": 2021-11-25T14:48:00.030Z,
    "creator": {
      "memberSince": 2020-12-03T14:47:50.856Z,
      "userId": "81ff8908-7732-4b17-8962-0b6526c7e50d",
      "username": "Naomi_Casper60",
    },
    "depth": {
      "depth": 39.93,
      "unit": "m",
    },
    "description": "Animi ducimus asperiores reiciendis. Totam beatae quas laboriosam voluptas perferendis corrupti adipisci quas itaque.",
    "directions": "Dolore molestiae aliquam.",
    "freeToDive": false,
    "gps": {
      "lat": 88.24,
      "lon": -178.88,
    },
    "id": "c68f5257-27a3-412a-a71d-1e669fb0cfff",
    "location": "White Plains Gabon",
    "name": "qualified beyond",
    "shoreAccess": false,
    "updatedOn": 2021-05-18T00:20:01.895Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results by rating 1`] = `
[
  {
    "averageDifficulty": 3.72,
    "averageRating": 3.46,
    "createdOn": 2019-09-18T13:28:58.184Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 73.2,
      "unit": "ft",
    },
    "description": "In aut vitae dolorum architecto perferendis. Cum harum excepturi.",
    "directions": "Perspiciatis maiores ad.",
    "freeToDive": false,
    "gps": {
      "lat": 85.04,
      "lon": 13.56,
    },
    "id": "b432465b-b102-45d2-88ab-9a7d7f57f82d",
    "location": "Rowlett Papua New Guinea",
    "name": "acclaimed windage",
    "shoreAccess": false,
    "updatedOn": 2020-12-16T11:12:54.892Z,
  },
  {
    "averageDifficulty": 1.74,
    "averageRating": 3.45,
    "createdOn": 2021-08-17T12:53:52.794Z,
    "creator": {
      "memberSince": 2019-10-05T05:53:03.760Z,
      "userId": "a4f41661-a1c4-46cd-9c34-30c952ed9d32",
      "username": "Lionel_Hickle",
    },
    "depth": {
      "depth": 25.46,
      "unit": "m",
    },
    "description": "Dolore magnam temporibus. Distinctio aliquam voluptatibus mollitia sapiente illum cupiditate.",
    "directions": "Explicabo vero adipisci natus.",
    "freeToDive": true,
    "gps": {
      "lat": -51.32,
      "lon": -72.53,
    },
    "id": "439a4b26-3b2c-4239-8692-7af157951d0e",
    "location": "Irvine Macao",
    "name": "runny mattock",
    "shoreAccess": true,
    "updatedOn": 2023-02-24T14:36:05.694Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 3.41,
    "createdOn": 2018-07-10T09:01:53.557Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 32,
      "unit": "ft",
    },
    "description": "Delectus doloribus a rerum. At facilis tempore laudantium id consectetur.",
    "directions": "Optio tenetur illum.",
    "freeToDive": true,
    "gps": {
      "lat": 23.33,
      "lon": -30.3,
    },
    "id": "c667a962-aad5-4f34-a82a-60c1f6d25063",
    "location": "Hattiesburg Liechtenstein",
    "name": "alarming catastrophe",
    "shoreAccess": false,
    "updatedOn": 2020-08-22T08:15:41.714Z,
  },
  {
    "averageDifficulty": 4.89,
    "averageRating": 3.38,
    "createdOn": 2020-04-29T15:44:58.227Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 21.09,
      "unit": "m",
    },
    "description": "Neque sequi quas aperiam est impedit expedita ducimus unde maiores. Suscipit tenetur enim molestiae excepturi.",
    "directions": "Nihil deleniti dolore ducimus voluptas accusamus.",
    "freeToDive": true,
    "gps": {
      "lat": -19.28,
      "lon": -151.77,
    },
    "id": "5cb4c351-7d29-4277-8815-eea84156a985",
    "location": "Brandon Afghanistan",
    "name": "unique fleck",
    "shoreAccess": true,
    "updatedOn": 2021-04-20T11:29:37.034Z,
  },
  {
    "averageDifficulty": 1.2,
    "averageRating": 3.36,
    "createdOn": 2019-11-11T04:47:58.204Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 31.5,
      "unit": "ft",
    },
    "description": "Harum minima alias nostrum in aut quos possimus. Iure animi vel asperiores delectus laboriosam facilis.",
    "directions": "Labore veritatis facilis.",
    "freeToDive": true,
    "gps": {
      "lat": 54.67,
      "lon": 90.13,
    },
    "id": "b5ddaa6d-9ed4-428d-9592-f6a21088e85c",
    "location": "Jupiter Iran",
    "name": "qualified somebody",
    "shoreAccess": false,
    "updatedOn": 2020-09-17T01:01:09.609Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results when freeToDive is false 1`] = `
[
  {
    "averageDifficulty": 3.8,
    "averageRating": 4.95,
    "createdOn": 2022-12-30T06:36:35.521Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 11.31,
      "unit": "m",
    },
    "description": "Quia accusantium asperiores. Blanditiis deserunt voluptates temporibus.",
    "directions": "Voluptas doloremque asperiores iure architecto voluptate fugit commodi.",
    "freeToDive": false,
    "gps": {
      "lat": 12.6,
      "lon": -55.31,
    },
    "id": "3d49a4f1-8918-4b89-96dc-81db0ea99ed5",
    "location": "Anaheim Guadeloupe",
    "name": "concrete thing",
    "shoreAccess": true,
    "updatedOn": 2021-12-19T06:06:01.543Z,
  },
  {
    "averageDifficulty": 1.75,
    "averageRating": 4.9,
    "createdOn": 2019-09-23T18:38:25.929Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 19.9,
      "unit": "m",
    },
    "description": "Suscipit eligendi provident minus saepe ipsum quod veniam placeat. Iure autem iure aliquid.",
    "directions": "Iste quo beatae suscipit deserunt eos.",
    "freeToDive": false,
    "gps": {
      "lat": -34.09,
      "lon": 115.05,
    },
    "id": "4a94192d-e3bb-4f5e-8ca0-7b8b01bca845",
    "location": "Canton Cote d'Ivoire",
    "name": "regal antechamber",
    "shoreAccess": false,
    "updatedOn": 2022-06-25T14:30:37.689Z,
  },
  {
    "averageDifficulty": 2,
    "averageRating": 4.84,
    "createdOn": 2018-09-28T19:27:47.940Z,
    "creator": {
      "memberSince": 2018-04-11T07:18:30.090Z,
      "userId": "c24724ee-bccb-46a6-bb55-035d4c5d97fa",
      "username": "Garret.Nicolas20",
    },
    "depth": {
      "depth": 48.2,
      "unit": "ft",
    },
    "description": "Rem ad vero doloribus exercitationem nulla provident ducimus alias. Ipsam fuga ipsam quasi enim aspernatur.",
    "directions": "Unde enim alias nam aspernatur perferendis omnis placeat nobis placeat.",
    "freeToDive": false,
    "gps": {
      "lat": 85.12,
      "lon": 147.47,
    },
    "id": "95341a27-a210-4423-bc39-40736b2df4c8",
    "location": "Bayamon French Southern Territories",
    "name": "crafty den",
    "shoreAccess": false,
    "updatedOn": 2023-01-21T00:22:37.805Z,
  },
  {
    "averageDifficulty": 2.2,
    "averageRating": 4.82,
    "createdOn": 2021-04-11T12:40:42.016Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 126.9,
      "unit": "ft",
    },
    "description": "Facere ratione suscipit reprehenderit veritatis laborum blanditiis corporis. Rem nostrum eius impedit repudiandae.",
    "directions": "Et reiciendis provident modi ut ut eaque quo.",
    "freeToDive": false,
    "gps": {
      "lat": 49.25,
      "lon": -136.76,
    },
    "id": "acc48388-1413-4610-a3a0-d36b76759ac2",
    "location": "Sterling Heights Bhutan",
    "name": "worrisome cinnamon",
    "shoreAccess": true,
    "updatedOn": 2021-03-11T21:10:37.784Z,
  },
  {
    "averageDifficulty": 2.05,
    "averageRating": 4.81,
    "createdOn": 2019-08-11T05:03:15.780Z,
    "creator": {
      "memberSince": 2021-07-14T13:16:54.794Z,
      "userId": "f66496b8-5544-48d2-9c04-1b0649038a79",
      "username": "Samir.Medhurst",
    },
    "depth": {
      "depth": 17.58,
      "unit": "m",
    },
    "description": "Soluta doloribus nulla minus harum beatae eveniet totam sit. Neque ea laudantium qui quam porro exercitationem perferendis.",
    "directions": "Fuga corrupti sint sint dolorum optio totam ullam itaque ea.",
    "freeToDive": false,
    "gps": {
      "lat": 54.78,
      "lon": -93.76,
    },
    "id": "961d6df4-63d9-4056-a6d5-c91c2ef00b29",
    "location": "Marysville Kiribati",
    "name": "roasted fleck",
    "shoreAccess": false,
    "updatedOn": 2022-10-01T19:02:08.802Z,
  },
  {
    "averageDifficulty": 1.72,
    "averageRating": 4.79,
    "createdOn": 2018-01-28T08:27:37.471Z,
    "creator": {
      "memberSince": 2022-11-14T23:00:20.603Z,
      "userId": "fd2d03a2-e477-43df-8d65-72966d3b1a8f",
      "username": "Cordia.Lebsack1",
    },
    "depth": {
      "depth": 13.05,
      "unit": "m",
    },
    "description": "Nesciunt voluptatum consequatur sed minus doloremque. Excepturi ut laborum tempora optio.",
    "directions": "Alias placeat in nisi occaecati repudiandae voluptates nisi tempore suscipit.",
    "freeToDive": false,
    "gps": {
      "lat": 54.39,
      "lon": -11.91,
    },
    "id": "9f52cd32-fecc-40f6-aa19-a0d2f29e0d68",
    "location": "Huntersville Norfolk Island",
    "name": "flashy desk",
    "shoreAccess": true,
    "updatedOn": 2021-12-04T07:05:13.276Z,
  },
  {
    "averageDifficulty": 3.36,
    "averageRating": 4.75,
    "createdOn": 2020-10-24T02:51:38.058Z,
    "creator": {
      "memberSince": 2021-07-14T13:16:54.794Z,
      "userId": "f66496b8-5544-48d2-9c04-1b0649038a79",
      "username": "Samir.Medhurst",
    },
    "depth": {
      "depth": 12.65,
      "unit": "m",
    },
    "description": "Sapiente porro blanditiis aliquid modi minima ad veritatis repudiandae. Debitis mollitia aperiam nemo.",
    "directions": "Doloremque veritatis ipsam.",
    "freeToDive": false,
    "gps": {
      "lat": 54.66,
      "lon": 104.57,
    },
    "id": "277494cd-b714-45ca-bda0-694758e96046",
    "location": "Shoreline United States of America",
    "name": "earnest total",
    "shoreAccess": true,
    "updatedOn": 2022-09-12T06:04:10.407Z,
  },
  {
    "averageDifficulty": 1.81,
    "averageRating": 4.69,
    "createdOn": 2021-10-13T22:42:46.160Z,
    "creator": {
      "memberSince": 2022-11-14T23:00:20.603Z,
      "userId": "fd2d03a2-e477-43df-8d65-72966d3b1a8f",
      "username": "Cordia.Lebsack1",
    },
    "depth": {
      "depth": 14.78,
      "unit": "m",
    },
    "description": "Sapiente officiis ab sequi. Dicta recusandae exercitationem aut vel eum.",
    "directions": "Cupiditate molestias saepe vero quas ratione.",
    "freeToDive": false,
    "gps": {
      "lat": -65.25,
      "lon": -2.07,
    },
    "id": "c4a4aba8-2989-4105-835c-ed885017ab70",
    "location": "Littleton Niue",
    "name": "primary trial",
    "shoreAccess": true,
    "updatedOn": 2021-02-15T01:39:46.382Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results when freeToDive is true 1`] = `
[
  {
    "averageDifficulty": 3.88,
    "averageRating": 4.96,
    "createdOn": 2021-06-13T14:23:35.687Z,
    "creator": {
      "memberSince": 2021-11-02T20:39:02.263Z,
      "userId": "11f3f8dd-5bbd-4344-8173-3a388484c4d3",
      "username": "Pietro.Tillman",
    },
    "depth": {
      "depth": 114.4,
      "unit": "ft",
    },
    "description": "Iure consequatur illum molestiae. Alias magni deserunt saepe facilis numquam reprehenderit corporis atque ipsam.",
    "directions": "Veritatis nesciunt possimus laborum quisquam officiis nostrum asperiores reiciendis.",
    "freeToDive": true,
    "gps": {
      "lat": -21.98,
      "lon": -110.74,
    },
    "id": "d9a2ee0d-1fde-411a-8808-faefdc4cb29d",
    "location": "Athens-Clarke County Liechtenstein",
    "name": "impure gavel",
    "shoreAccess": false,
    "updatedOn": 2020-11-26T14:50:50.727Z,
  },
  {
    "averageDifficulty": 4.4,
    "averageRating": 4.93,
    "createdOn": 2017-11-10T20:27:25.268Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 60.4,
      "unit": "ft",
    },
    "description": "Beatae voluptate incidunt dolorem autem qui. Incidunt eaque aspernatur corrupti maiores ea quis dicta libero molestias.",
    "directions": "Repellendus enim ratione molestias excepturi natus enim tempora sint repellat.",
    "freeToDive": true,
    "gps": {
      "lat": -49.25,
      "lon": -135.28,
    },
    "id": "d723ed3f-edde-4dbe-b9fc-dfa846ac0cc2",
    "location": "San Jose Guernsey",
    "name": "runny patio",
    "shoreAccess": true,
    "updatedOn": 2023-01-20T08:20:22.960Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.91,
    "createdOn": 2020-08-24T23:45:29.318Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 35.84,
      "unit": "m",
    },
    "description": "Porro voluptate exercitationem aperiam cumque eveniet iste adipisci non. Tempora ullam tempore eius nulla.",
    "directions": "Distinctio quas dolor facilis totam nam laboriosam architecto.",
    "freeToDive": true,
    "gps": {
      "lat": 21.8,
      "lon": -7.65,
    },
    "id": "4d879040-500e-4fd5-8400-e6f4c78e5b62",
    "location": "Rialto Marshall Islands",
    "name": "rundown handful",
    "shoreAccess": false,
    "updatedOn": 2021-06-13T03:32:10.180Z,
  },
  {
    "averageDifficulty": 4.35,
    "averageRating": 4.902,
    "createdOn": 2018-06-27T20:05:37.095Z,
    "creator": {
      "memberSince": 2020-09-25T22:21:02.836Z,
      "userId": "25793873-3413-4e78-aa6e-77717a7a23b8",
      "username": "Casimir_Reynolds11",
    },
    "depth": {
      "depth": 35.16,
      "unit": "m",
    },
    "description": "At perferendis repudiandae recusandae. Non totam ea molestias alias libero corporis quos repellendus culpa.",
    "directions": "Natus facilis nam iure in.",
    "freeToDive": true,
    "gps": {
      "lat": 66.65,
      "lon": 140.28,
    },
    "id": "6dbb141e-2cbd-4ac7-bdd9-ed54ff10623e",
    "location": "Cedar Park Denmark",
    "name": "each breath",
    "shoreAccess": true,
    "updatedOn": 2021-05-03T12:52:47.304Z,
  },
  {
    "averageDifficulty": 4.7,
    "averageRating": 4.9,
    "createdOn": 2023-04-15T03:07:28.621Z,
    "creator": {
      "memberSince": 2023-01-28T16:05:43.410Z,
      "userId": "d078d455-79a1-4b15-aef3-7db1809c010c",
      "username": "Justus_Turcotte55",
    },
    "depth": {
      "depth": 90.5,
      "unit": "ft",
    },
    "description": "Accusamus facilis fugiat eaque rerum maxime. Deserunt aliquid sint et dolor dignissimos perspiciatis nobis accusamus officia.",
    "directions": "Ducimus culpa earum quisquam asperiores tempora.",
    "freeToDive": true,
    "gps": {
      "lat": -55.36,
      "lon": -74.86,
    },
    "id": "78c7fd6a-6c04-432b-ab49-2104ef55d2c4",
    "location": "Sunnyvale Netherlands Antilles",
    "name": "kindhearted thought",
    "shoreAccess": false,
    "updatedOn": 2023-07-08T10:08:17.010Z,
  },
  {
    "averageDifficulty": 2.07,
    "averageRating": 4.88,
    "createdOn": 2020-03-31T01:03:30.190Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 6.09,
      "unit": "m",
    },
    "description": "Totam voluptatum magnam voluptas. Commodi maxime aperiam deserunt.",
    "directions": "Harum nihil reiciendis corrupti nam vel neque.",
    "freeToDive": true,
    "gps": {
      "lat": -81.39,
      "lon": 132.33,
    },
    "id": "ccb01e30-256b-4253-80c7-4445b7424ba5",
    "location": "Centennial Guadeloupe",
    "name": "worst treasure",
    "shoreAccess": false,
    "updatedOn": 2022-01-25T05:26:50.265Z,
  },
  {
    "averageDifficulty": 5,
    "averageRating": 4.84,
    "createdOn": 2021-10-14T09:24:04.436Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 83.4,
      "unit": "ft",
    },
    "description": "Quisquam blanditiis voluptatum necessitatibus dolor dolore dolore alias incidunt. Praesentium dolorum cupiditate perferendis libero.",
    "directions": "Alias molestias officiis voluptatum error sed libero iusto optio suscipit.",
    "freeToDive": true,
    "gps": {
      "lat": -6.36,
      "lon": -96.69,
    },
    "id": "28f66713-9a95-46eb-9112-e8db952972d4",
    "location": "New Brunswick French Guiana",
    "name": "disloyal apology",
    "shoreAccess": true,
    "updatedOn": 2023-05-01T19:11:08.933Z,
  },
  {
    "averageDifficulty": 2.95,
    "averageRating": 4.82,
    "createdOn": 2021-10-18T02:26:32.397Z,
    "creator": {
      "memberSince": 2023-01-15T03:59:59.677Z,
      "userId": "0fae3dce-e15c-43aa-ba82-e8b5742d2cbb",
      "username": "Elijah44",
    },
    "depth": {
      "depth": 80.5,
      "unit": "ft",
    },
    "description": "Impedit ipsam veniam amet iste delectus. Incidunt aliquam iure fugiat hic cumque aliquid perspiciatis.",
    "directions": "Architecto laudantium illum debitis praesentium fugiat magni corporis suscipit nesciunt.",
    "freeToDive": true,
    "gps": {
      "lat": 64.88,
      "lon": 100.5,
    },
    "id": "2ea163d2-e9cd-4538-95a2-c4f3c90f7db9",
    "location": "Shawnee Guinea",
    "name": "glum lizard",
    "shoreAccess": false,
    "updatedOn": 2020-10-16T09:03:58.147Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results when shoreAccess is false 1`] = `
[
  {
    "averageDifficulty": 3.88,
    "averageRating": 4.96,
    "createdOn": 2021-06-13T14:23:35.687Z,
    "creator": {
      "memberSince": 2021-11-02T20:39:02.263Z,
      "userId": "11f3f8dd-5bbd-4344-8173-3a388484c4d3",
      "username": "Pietro.Tillman",
    },
    "depth": {
      "depth": 114.4,
      "unit": "ft",
    },
    "description": "Iure consequatur illum molestiae. Alias magni deserunt saepe facilis numquam reprehenderit corporis atque ipsam.",
    "directions": "Veritatis nesciunt possimus laborum quisquam officiis nostrum asperiores reiciendis.",
    "freeToDive": true,
    "gps": {
      "lat": -21.98,
      "lon": -110.74,
    },
    "id": "d9a2ee0d-1fde-411a-8808-faefdc4cb29d",
    "location": "Athens-Clarke County Liechtenstein",
    "name": "impure gavel",
    "shoreAccess": false,
    "updatedOn": 2020-11-26T14:50:50.727Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.91,
    "createdOn": 2020-08-24T23:45:29.318Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 35.84,
      "unit": "m",
    },
    "description": "Porro voluptate exercitationem aperiam cumque eveniet iste adipisci non. Tempora ullam tempore eius nulla.",
    "directions": "Distinctio quas dolor facilis totam nam laboriosam architecto.",
    "freeToDive": true,
    "gps": {
      "lat": 21.8,
      "lon": -7.65,
    },
    "id": "4d879040-500e-4fd5-8400-e6f4c78e5b62",
    "location": "Rialto Marshall Islands",
    "name": "rundown handful",
    "shoreAccess": false,
    "updatedOn": 2021-06-13T03:32:10.180Z,
  },
  {
    "averageDifficulty": 4.7,
    "averageRating": 4.9,
    "createdOn": 2023-04-15T03:07:28.621Z,
    "creator": {
      "memberSince": 2023-01-28T16:05:43.410Z,
      "userId": "d078d455-79a1-4b15-aef3-7db1809c010c",
      "username": "Justus_Turcotte55",
    },
    "depth": {
      "depth": 90.5,
      "unit": "ft",
    },
    "description": "Accusamus facilis fugiat eaque rerum maxime. Deserunt aliquid sint et dolor dignissimos perspiciatis nobis accusamus officia.",
    "directions": "Ducimus culpa earum quisquam asperiores tempora.",
    "freeToDive": true,
    "gps": {
      "lat": -55.36,
      "lon": -74.86,
    },
    "id": "78c7fd6a-6c04-432b-ab49-2104ef55d2c4",
    "location": "Sunnyvale Netherlands Antilles",
    "name": "kindhearted thought",
    "shoreAccess": false,
    "updatedOn": 2023-07-08T10:08:17.010Z,
  },
  {
    "averageDifficulty": 1.75,
    "averageRating": 4.9,
    "createdOn": 2019-09-23T18:38:25.929Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 19.9,
      "unit": "m",
    },
    "description": "Suscipit eligendi provident minus saepe ipsum quod veniam placeat. Iure autem iure aliquid.",
    "directions": "Iste quo beatae suscipit deserunt eos.",
    "freeToDive": false,
    "gps": {
      "lat": -34.09,
      "lon": 115.05,
    },
    "id": "4a94192d-e3bb-4f5e-8ca0-7b8b01bca845",
    "location": "Canton Cote d'Ivoire",
    "name": "regal antechamber",
    "shoreAccess": false,
    "updatedOn": 2022-06-25T14:30:37.689Z,
  },
  {
    "averageDifficulty": 2.07,
    "averageRating": 4.88,
    "createdOn": 2020-03-31T01:03:30.190Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 6.09,
      "unit": "m",
    },
    "description": "Totam voluptatum magnam voluptas. Commodi maxime aperiam deserunt.",
    "directions": "Harum nihil reiciendis corrupti nam vel neque.",
    "freeToDive": true,
    "gps": {
      "lat": -81.39,
      "lon": 132.33,
    },
    "id": "ccb01e30-256b-4253-80c7-4445b7424ba5",
    "location": "Centennial Guadeloupe",
    "name": "worst treasure",
    "shoreAccess": false,
    "updatedOn": 2022-01-25T05:26:50.265Z,
  },
  {
    "averageDifficulty": 2,
    "averageRating": 4.84,
    "createdOn": 2018-09-28T19:27:47.940Z,
    "creator": {
      "memberSince": 2018-04-11T07:18:30.090Z,
      "userId": "c24724ee-bccb-46a6-bb55-035d4c5d97fa",
      "username": "Garret.Nicolas20",
    },
    "depth": {
      "depth": 48.2,
      "unit": "ft",
    },
    "description": "Rem ad vero doloribus exercitationem nulla provident ducimus alias. Ipsam fuga ipsam quasi enim aspernatur.",
    "directions": "Unde enim alias nam aspernatur perferendis omnis placeat nobis placeat.",
    "freeToDive": false,
    "gps": {
      "lat": 85.12,
      "lon": 147.47,
    },
    "id": "95341a27-a210-4423-bc39-40736b2df4c8",
    "location": "Bayamon French Southern Territories",
    "name": "crafty den",
    "shoreAccess": false,
    "updatedOn": 2023-01-21T00:22:37.805Z,
  },
  {
    "averageDifficulty": 2.95,
    "averageRating": 4.82,
    "createdOn": 2021-10-18T02:26:32.397Z,
    "creator": {
      "memberSince": 2023-01-15T03:59:59.677Z,
      "userId": "0fae3dce-e15c-43aa-ba82-e8b5742d2cbb",
      "username": "Elijah44",
    },
    "depth": {
      "depth": 80.5,
      "unit": "ft",
    },
    "description": "Impedit ipsam veniam amet iste delectus. Incidunt aliquam iure fugiat hic cumque aliquid perspiciatis.",
    "directions": "Architecto laudantium illum debitis praesentium fugiat magni corporis suscipit nesciunt.",
    "freeToDive": true,
    "gps": {
      "lat": 64.88,
      "lon": 100.5,
    },
    "id": "2ea163d2-e9cd-4538-95a2-c4f3c90f7db9",
    "location": "Shawnee Guinea",
    "name": "glum lizard",
    "shoreAccess": false,
    "updatedOn": 2020-10-16T09:03:58.147Z,
  },
  {
    "averageDifficulty": 2.05,
    "averageRating": 4.81,
    "createdOn": 2019-08-11T05:03:15.780Z,
    "creator": {
      "memberSince": 2021-07-14T13:16:54.794Z,
      "userId": "f66496b8-5544-48d2-9c04-1b0649038a79",
      "username": "Samir.Medhurst",
    },
    "depth": {
      "depth": 17.58,
      "unit": "m",
    },
    "description": "Soluta doloribus nulla minus harum beatae eveniet totam sit. Neque ea laudantium qui quam porro exercitationem perferendis.",
    "directions": "Fuga corrupti sint sint dolorum optio totam ullam itaque ea.",
    "freeToDive": false,
    "gps": {
      "lat": 54.78,
      "lon": -93.76,
    },
    "id": "961d6df4-63d9-4056-a6d5-c91c2ef00b29",
    "location": "Marysville Kiribati",
    "name": "roasted fleck",
    "shoreAccess": false,
    "updatedOn": 2022-10-01T19:02:08.802Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will filter results when shoreAccess is true 1`] = `
[
  {
    "averageDifficulty": 3.8,
    "averageRating": 4.95,
    "createdOn": 2022-12-30T06:36:35.521Z,
    "creator": {
      "memberSince": 2021-07-03T20:52:36.948Z,
      "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 11.31,
      "unit": "m",
    },
    "description": "Quia accusantium asperiores. Blanditiis deserunt voluptates temporibus.",
    "directions": "Voluptas doloremque asperiores iure architecto voluptate fugit commodi.",
    "freeToDive": false,
    "gps": {
      "lat": 12.6,
      "lon": -55.31,
    },
    "id": "3d49a4f1-8918-4b89-96dc-81db0ea99ed5",
    "location": "Anaheim Guadeloupe",
    "name": "concrete thing",
    "shoreAccess": true,
    "updatedOn": 2021-12-19T06:06:01.543Z,
  },
  {
    "averageDifficulty": 4.4,
    "averageRating": 4.93,
    "createdOn": 2017-11-10T20:27:25.268Z,
    "creator": {
      "memberSince": 2018-05-21T04:31:43.020Z,
      "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "username": "Tillman30",
    },
    "depth": {
      "depth": 60.4,
      "unit": "ft",
    },
    "description": "Beatae voluptate incidunt dolorem autem qui. Incidunt eaque aspernatur corrupti maiores ea quis dicta libero molestias.",
    "directions": "Repellendus enim ratione molestias excepturi natus enim tempora sint repellat.",
    "freeToDive": true,
    "gps": {
      "lat": -49.25,
      "lon": -135.28,
    },
    "id": "d723ed3f-edde-4dbe-b9fc-dfa846ac0cc2",
    "location": "San Jose Guernsey",
    "name": "runny patio",
    "shoreAccess": true,
    "updatedOn": 2023-01-20T08:20:22.960Z,
  },
  {
    "averageDifficulty": 4.35,
    "averageRating": 4.902,
    "createdOn": 2018-06-27T20:05:37.095Z,
    "creator": {
      "memberSince": 2020-09-25T22:21:02.836Z,
      "userId": "25793873-3413-4e78-aa6e-77717a7a23b8",
      "username": "Casimir_Reynolds11",
    },
    "depth": {
      "depth": 35.16,
      "unit": "m",
    },
    "description": "At perferendis repudiandae recusandae. Non totam ea molestias alias libero corporis quos repellendus culpa.",
    "directions": "Natus facilis nam iure in.",
    "freeToDive": true,
    "gps": {
      "lat": 66.65,
      "lon": 140.28,
    },
    "id": "6dbb141e-2cbd-4ac7-bdd9-ed54ff10623e",
    "location": "Cedar Park Denmark",
    "name": "each breath",
    "shoreAccess": true,
    "updatedOn": 2021-05-03T12:52:47.304Z,
  },
  {
    "averageDifficulty": 5,
    "averageRating": 4.84,
    "createdOn": 2021-10-14T09:24:04.436Z,
    "creator": {
      "memberSince": 2022-09-07T06:00:44.772Z,
      "userId": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "username": "Leslie65",
    },
    "depth": {
      "depth": 83.4,
      "unit": "ft",
    },
    "description": "Quisquam blanditiis voluptatum necessitatibus dolor dolore dolore alias incidunt. Praesentium dolorum cupiditate perferendis libero.",
    "directions": "Alias molestias officiis voluptatum error sed libero iusto optio suscipit.",
    "freeToDive": true,
    "gps": {
      "lat": -6.36,
      "lon": -96.69,
    },
    "id": "28f66713-9a95-46eb-9112-e8db952972d4",
    "location": "New Brunswick French Guiana",
    "name": "disloyal apology",
    "shoreAccess": true,
    "updatedOn": 2023-05-01T19:11:08.933Z,
  },
  {
    "averageDifficulty": 2.2,
    "averageRating": 4.82,
    "createdOn": 2021-04-11T12:40:42.016Z,
    "creator": {
      "memberSince": 2023-05-22T22:37:37.769Z,
      "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "username": "Aglae31",
    },
    "depth": {
      "depth": 126.9,
      "unit": "ft",
    },
    "description": "Facere ratione suscipit reprehenderit veritatis laborum blanditiis corporis. Rem nostrum eius impedit repudiandae.",
    "directions": "Et reiciendis provident modi ut ut eaque quo.",
    "freeToDive": false,
    "gps": {
      "lat": 49.25,
      "lon": -136.76,
    },
    "id": "acc48388-1413-4610-a3a0-d36b76759ac2",
    "location": "Sterling Heights Bhutan",
    "name": "worrisome cinnamon",
    "shoreAccess": true,
    "updatedOn": 2021-03-11T21:10:37.784Z,
  },
  {
    "averageDifficulty": 1.72,
    "averageRating": 4.79,
    "createdOn": 2018-01-28T08:27:37.471Z,
    "creator": {
      "memberSince": 2022-11-14T23:00:20.603Z,
      "userId": "fd2d03a2-e477-43df-8d65-72966d3b1a8f",
      "username": "Cordia.Lebsack1",
    },
    "depth": {
      "depth": 13.05,
      "unit": "m",
    },
    "description": "Nesciunt voluptatum consequatur sed minus doloremque. Excepturi ut laborum tempora optio.",
    "directions": "Alias placeat in nisi occaecati repudiandae voluptates nisi tempore suscipit.",
    "freeToDive": false,
    "gps": {
      "lat": 54.39,
      "lon": -11.91,
    },
    "id": "9f52cd32-fecc-40f6-aa19-a0d2f29e0d68",
    "location": "Huntersville Norfolk Island",
    "name": "flashy desk",
    "shoreAccess": true,
    "updatedOn": 2021-12-04T07:05:13.276Z,
  },
  {
    "averageDifficulty": 3.36,
    "averageRating": 4.75,
    "createdOn": 2020-10-24T02:51:38.058Z,
    "creator": {
      "memberSince": 2021-07-14T13:16:54.794Z,
      "userId": "f66496b8-5544-48d2-9c04-1b0649038a79",
      "username": "Samir.Medhurst",
    },
    "depth": {
      "depth": 12.65,
      "unit": "m",
    },
    "description": "Sapiente porro blanditiis aliquid modi minima ad veritatis repudiandae. Debitis mollitia aperiam nemo.",
    "directions": "Doloremque veritatis ipsam.",
    "freeToDive": false,
    "gps": {
      "lat": 54.66,
      "lon": 104.57,
    },
    "id": "277494cd-b714-45ca-bda0-694758e96046",
    "location": "Shoreline United States of America",
    "name": "earnest total",
    "shoreAccess": true,
    "updatedOn": 2022-09-12T06:04:10.407Z,
  },
  {
    "averageDifficulty": 1.81,
    "averageRating": 4.69,
    "createdOn": 2021-10-13T22:42:46.160Z,
    "creator": {
      "memberSince": 2022-11-14T23:00:20.603Z,
      "userId": "fd2d03a2-e477-43df-8d65-72966d3b1a8f",
      "username": "Cordia.Lebsack1",
    },
    "depth": {
      "depth": 14.78,
      "unit": "m",
    },
    "description": "Sapiente officiis ab sequi. Dicta recusandae exercitationem aut vel eum.",
    "directions": "Cupiditate molestias saepe vero quas ratione.",
    "freeToDive": false,
    "gps": {
      "lat": -65.25,
      "lon": -2.07,
    },
    "id": "c4a4aba8-2989-4105-835c-ed885017ab70",
    "location": "Littleton Niue",
    "name": "primary trial",
    "shoreAccess": true,
    "updatedOn": 2021-02-15T01:39:46.382Z,
  },
]
`;

exports[`Dive Site Service when searching dive sites will perform text-based searches 1`] = `
[
  {
    "averageDifficulty": 3.43,
    "averageRating": 4.52,
    "createdOn": 2019-03-19T01:14:04.542Z,
    "creator": {
      "memberSince": 2019-04-26T02:22:55.498Z,
      "userId": "fb717328-5bbc-4dab-b516-dc0ec8ab8022",
      "username": "Michale_Toy74",
    },
    "depth": {
      "depth": 29.2,
      "unit": "m",
    },
    "description": "Incidunt cum repellat illo molestiae voluptate aspernatur labore. Cum velit natus minus assumenda fugit debitis eos nam at.",
    "directions": "Delectus deleniti ducimus earum vel numquam reprehenderit modi.",
    "freeToDive": true,
    "gps": {
      "lat": -33.07,
      "lon": -85.12,
    },
    "id": "bbd21b2b-85d2-47fe-b4a2-dfd980172ed8",
    "location": "North Lauderdale Luxembourg",
    "name": "ethical savings",
    "shoreAccess": false,
    "updatedOn": 2023-02-02T08:27:28.861Z,
  },
  {
    "averageDifficulty": 2.55,
    "averageRating": 4,
    "createdOn": 2023-01-06T16:56:05.573Z,
    "creator": {
      "memberSince": 2017-09-20T17:24:23.460Z,
      "userId": "9487653a-40e7-446f-b45d-3fbf3bf97644",
      "username": "Preston40",
    },
    "depth": {
      "depth": 93.3,
      "unit": "ft",
    },
    "description": "Officiis fugiat repellendus voluptatem facere doloribus autem sapiente quas. Aperiam non distinctio rem aperiam saepe quae soluta adipisci dolores.",
    "directions": "Perspiciatis praesentium inventore deserunt sed laboriosam quas officia.",
    "freeToDive": false,
    "gps": {
      "lat": -31.96,
      "lon": -7.2,
    },
    "id": "f8b954ff-709b-43bc-aade-21a6f6906cce",
    "location": "Fargo Georgia",
    "name": "inexperienced scimitar",
    "shoreAccess": true,
    "updatedOn": 2022-02-17T12:52:47.102Z,
  },
]
`;
